SFDCProject/src/objects/Sunrun_Error_Message__c.object
<CustomObject>
    <fields>
        <fullName>Error_Code__c</fullName>
        <externalId>true</externalId>
        <label>Error Code</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sunrun Error Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Error_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Error Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sunrun Error Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>